# RuDS

./: .gitignore  AGENTS.md  BUILD.md  CLEANUP.md  CLI.md  Cargo.toml  DOCUMENTATION.md  MCP.md  README.md  RUST_COMPATIBILITY_MATRIX_TEMPLATE.md  RUST_EXECUTION_BACKLOG.md  RUST_PLAN.md  RUST_PLAN_CORE.md  RUST_PLAN_EXTENSION.md  SPECIFICATION_INDEX.md  diesel.toml
.cargo/: config.toml
crates/bds-cli/: Cargo.toml
crates/bds-cli/src/: lib.rs  main.rs
crates/bds-cli/tests/: process.rs
crates/bds-core/: Cargo.toml
crates/bds-core/examples/: generate_scripting_docs.rs
crates/bds-core/migrations/: V1__initial_schema.sql  V2__fix_defaults_and_collation.sql  V3__align_ai_schema.sql
crates/bds-core/migrations/2026-07-19-112144-0000_add_notification_project_scope/: down.sql  up.sql
crates/bds-core/migrations/2026-07-19-123029-0000_add_mcp_proposals/: down.sql  up.sql
crates/bds-core/migrations/2026-07-20-100424-0000_add_ai_endpoint_models/: down.sql  up.sql
crates/bds-core/migrations/2026-07-22-161429-0000_add_mcp_proposal_entity_status_unique_index/: down.sql  up.sql
crates/bds-core/migrations/20260718000000_initial_schema/: down.sql  up.sql
crates/bds-core/migrations/20260718220000_add_chat_message_token_usage/: down.sql  up.sql
crates/bds-core/migrations/20260719090000_embedding_vector_blob/: down.sql  up.sql
crates/bds-core/migrations/20260719141036_add_chat_cache_token_usage/: down.sql  up.sql
crates/bds-core/migrations/20260719163000_add_chat_surface_state/: down.sql  up.sql
crates/bds-core/projects/19521f8e-36f1-41e5-9786-145615bcda61/meta/: project.json
crates/bds-core/projects/2c1652b0-6e4f-4f35-95d5-16039eb8815b/meta/: categories.json
crates/bds-core/src/: lib.rs
crates/bds-core/src/db/: connection.rs  from_row.rs  fts.rs  migrations.rs  mod.rs  schema.patch  schema.rs  types.rs
crates/bds-core/src/db/queries/: chat.rs  db_notification.rs  embedding.rs  generated_file_hash.rs  import_definition.rs  mcp_proposal.rs  media.rs  media_translation.rs  mod.rs  post.rs  post_link.rs  post_media.rs  post_translation.rs  project.rs  script.rs  setting.rs  tag.rs  template.rs
crates/bds-core/src/engine/: ai.rs  auto_translation.rs  blogmark.rs  calendar.rs  chat.rs  chat_surfaces.rs  chat_tools.rs  cli_launcher.rs  cli_sync.rs  context.rs  domain_events.rs  embedding.rs  error.rs  gallery_import.rs  generation.rs  git.rs  media.rs  menu.rs  meta.rs  metadata_diff.rs  mod.rs  post.rs  post_media.rs  preview.rs  project.rs  publishing.rs  rebuild.rs  script.rs  script_rebuild.rs  search.rs  settings.rs  site_assets.rs  tag.rs  task.rs  template.rs  template_rebuild.rs  ui_state.rs  validate_content.rs  validate_media.rs  validate_site.rs  (+2 more)
crates/bds-core/src/engine/mcp/: agent_config.rs  http.rs  mod.rs  protocol.rs  resources.rs  tools.rs
crates/bds-core/src/i18n/: mod.rs
crates/bds-core/src/model/: chat.rs  embedding.rs  event.rs  generation.rs  import.rs  mcp.rs  media.rs  metadata.rs  mod.rs  post.rs  project.rs  script.rs  tag.rs  template.rs
crates/bds-core/src/render/: generation.rs  macros.rs  markdown.rs  mod.rs  page_renderer.rs  routes.rs  site.rs  template_lookup.rs
crates/bds-core/src/scripting/: core_host.rs  manifest.rs  mod.rs
crates/bds-core/src/util/: app_paths.rs  atomic_write.rs  checksum.rs  frontmatter.rs  mod.rs  paths.rs  sidecar.rs  slug.rs  thumbnail.rs  timestamp.rs
crates/bds-core/testdata/: close.heic
crates/bds-core/tests/: chat.rs  chat_surfaces.rs  domain_events.rs  fixture_readability.rs  git_engine.rs  m1_validation.rs  m4_generation_engine.rs  m4_generation_primitives.rs  m4_page_renderer.rs  m4_render.rs  mcp.rs  orm_boundary.rs  spec_claims.rs  wordpress_import.rs
crates/bds-core/tests/support/: mod.rs
crates/bds-mcp/: Cargo.toml
crates/bds-server/: Cargo.toml  build.rs
crates/bds-server/src/: auth.rs  boot.rs  client.rs  host.rs  lib.rs  main.rs  protocol.rs  transport.rs  tui.rs
crates/bds-ui/: Cargo.toml  build.rs
crates/bds-ui/assets/app-icons/: bds.icns
crates/bds-ui/src/: app.rs  lib.rs  main.rs
crates/bds-ui/src/app/: editor_handlers.rs  engine_handlers.rs  git_handlers.rs  preview_handlers.rs  search.rs  tasks.rs
crates/bds-ui/src/components/: inputs.rs  mod.rs  native_edit.rs  popover.rs  webview.rs
crates/bds-ui/src/i18n/: mod.rs  relative_date.rs
crates/bds-ui/src/platform/: dialog.rs  macos.rs  menu.rs  mod.rs  script_host.rs
crates/bds-ui/src/state/: mod.rs  navigation.rs  sidebar_filter.rs  tabs.rs  toast.rs
crates/bds-ui/src/views/: activity_bar.rs  chat_surfaces.rs  chat_view.rs  dashboard.rs  documentation.rs  duplicates.rs  git.rs  import_editor.rs  media_editor.rs  menu_editor.rs  metadata_diff.rs  mod.rs  modal.rs  panel.rs  post_editor.rs  project_selector.rs  script_editor.rs  settings_view.rs  sidebar.rs  site_validation.rs  status_bar.rs  style_view.rs  tab_bar.rs  tags_view.rs  template_editor.rs  toast.rs  translation_editor.rs  translation_validation.rs  welcome.rs  workspace.rs
crates/bds-ui/tests/: app_smoke.rs  bundled_highlighting.rs  i18n_completeness.rs  m2_validation.rs  menu_routing.rs  packaging_assets.rs  project_flow.rs
docs/: COMPATIBILITY_INVENTORY.md  ICED_ARCHITECTURE_PATTERNS.md  LIQUID_FEATURE_INVENTORY.md  RESEARCH_FINDINGS.md  UI_STYLE_GUIDE.md
fixtures/: create_fixture.sh  update_golden_rendering.sh
ideas/: recursive-sparking-haven.md
specs/: action_patterns.allium  ai.allium  bds.allium  cli.allium  cli_sync.allium  editor_chat.allium  editor_media.allium  editor_misc.allium  editor_post.allium  editor_script.allium  editor_settings.allium  editor_tags.allium  editor_template.allium  editors.allium  embedding.allium  engine_side_effects.allium  events.allium  flows.allium  frontmatter.allium  generation.allium  git.allium  i18n.allium  import.allium  layout.allium  mcp.allium  media.allium  media_processing.allium  menu.allium  metadata.allium  metadata_diff.allium  modals.allium  post.allium  preview.allium  project.allium  publishing.allium  rendering.allium  schema.allium  script.allium  search.allium  server.allium  (+9 more)
(+88 files in other folders)
