[workspace]
resolver = "2"
members = [
    "crates/bds-core",
    "crates/bds-editor",
    "crates/bds-ui",
    "crates/bds-cli",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
# Foundation
rusqlite = { version = "0.33", features = ["bundled", "vtab"] }
refinery = { version = "0.8", features = ["rusqlite"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
deunicode = "1"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
image = "0.25"
rust-stemmers = "1"
sys-locale = "0.3"
dirs = "5"
open = "5"
pulldown-cmark = "0.13"
liquid = "0.26"
liquid-core = { version = "0.26", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

# UI framework
iced = { version = "0.13", features = ["wgpu", "advanced", "image", "svg", "tokio"] }

# Editor widget
cosmic-text = "0.12"
ropey = "1"
syntect = "5"

# Platform integration (cross-platform)
muda = "0.15"
rfd = "0.15"

# Internal crates
bds-core = { path = "crates/bds-core" }
bds-editor = { path = "crates/bds-editor" }
