[package]
name = "bds-cli"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
bds-core = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
