[package]
name = "bds-core"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
rusqlite = { workspace = true }
refinery = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
deunicode = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
tempfile = "3"
