[package]
name = "bds-server"
edition.workspace = true
version.workspace = true
license.workspace = true

[lib]
crate-type = ["dylib"]

[dependencies]
bds-core = { workspace = true }
bds-editor = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
image = { workspace = true }
russh = { workspace = true }
ratatui = { workspace = true }
ratatui-image = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tui-markdown = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
