[package]
name = "bds-ui"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
bds-core = { workspace = true }
bds-editor = { workspace = true }
bds-server = { workspace = true }
iced = { workspace = true }
muda = { workspace = true }
rfd = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }
open = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
wry = "0.55"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-app-kit = "0.3"

[dev-dependencies]
fluent-syntax = { workspace = true }
syn = { version = "2", features = ["full", "visit"] }
tempfile = "3"

[build-dependencies]
winresource = "0.1"

[package.metadata.packager]
product-name = "Blogging Desktop Server"
identifier = "de.rfc1437.ruds"
description = "A desktop application for writing and publishing static blogs."
before-packaging-command = "cargo run --quiet -p bds-package-runtime"
before-each-package-command = "cargo run --quiet -p bds-package-runtime -- sign-app-for-dmg"
binaries = [
    { path = "bds-ui", main = true },
    { path = "bds-cli" },
    { path = "bds-mcp" },
]
resources = [
    { src = "../../target/release/bds-runtime/*", target = "." },
]
deep-link-protocols = [{ schemes = ["ruds"] }]
icons = [
    "assets/app-icons/bds.icns",
    "assets/app-icons/bds.ico",
    "assets/app-icons/bds.png",
]

[package.metadata.packager.macos]
minimum-system-version = "26.0"

[package.metadata.packager.nsis]
installer-icon = "assets/app-icons/bds.ico"
